playing with some values

--- a/Source/Layout/Splits/SplitsControl.axaml
+++ b/Source/Layout/Splits/SplitsControl.axaml
@@ -39,8 +39,8 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
           </Grid.ColumnDefinitions>
-          <TextBlock Grid.Column="0" Text="{Binding Segment.Label}" Margin="1"
-            HorizontalAlignment="Left" />
+          <TextBlock Grid.Column="0" Text="{Binding Segment.Label}"
+            HorizontalAlignment="Left" Margin="10,1,1,1" />
           <ItemsControl ItemsSource="{Binding Comparisons}" Grid.Column="1">
             <ItemsControl.ItemTemplate>
               <DataTemplate x:DataType="local:ComparisonViewModel">
