--- a/App.axaml
+++ b/App.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="LibreSplit.App"
              xmlns:convert="clr-namespace:LibreSplit.Convert"
-             RequestedThemeVariant="Dark">
+             RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
     <Application.Resources>
     <convert:NullableTimeSpanToStringConverter x:Key="NullableTimeSpanToStringConverter"/>
@@ -11,11 +11,11 @@
     <Application.Styles>
         <FluentTheme />
     <Style Selector="Grid">
-        <Setter Property="Background" Value="#2F2F2F" />
+        <Setter Property="Background" Value="#000000ff" />
     </Style>
 
     <Style Selector="Label">
-        <Setter Property="Background" Value="#2F2F2F" />
+        <Setter Property="Background" Value="#141414ff" />
     </Style>
     </Application.Styles>
 </Application>
