--- a/Layouts/SplitsLayout/SplitsEditor.axaml
+++ b/Layouts/SplitsLayout/SplitsEditor.axaml
@@ -16,13 +16,14 @@
       <RowDefinition Height="*" />
       <RowDefinition Height="*" />
       <RowDefinition Height="*" />
+      <RowDefinition Height="*" />
     </Grid.RowDefinitions>
     <TextBlock Text="Active Backgound Color" Grid.Row="0" Grid.Column="0" />
     <colorpicker:ColorButton Grid.Row="0" Grid.Column="1"
-      Color="{Binding LayoutItem.ActiveBGColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
+      Color="{Binding LayoutItem.ActiveSplitColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
     <TextBlock Text="Inactive Backgound Color" Grid.Row="1" Grid.Column="0" />
     <colorpicker:ColorButton Grid.Row="1" Grid.Column="1"
-      Color="{Binding LayoutItem.InactiveBGColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
+      Color="{Binding LayoutItem.InactiveSplitColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
     <TextBlock Text="Ahead Gaining Time Color" Grid.Row="2" Grid.Column="0" />
     <colorpicker:ColorButton Grid.Row="2" Grid.Column="1"
       Color="{Binding LayoutItem.AheadGainingTimeColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
@@ -35,5 +36,8 @@
     <TextBlock Text="Behind Losing Time Color" Grid.Row="5" Grid.Column="0" />
     <colorpicker:ColorButton Grid.Row="5" Grid.Column="1"
       Color="{Binding LayoutItem.BehindLosingTimeColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
+    <TextBlock Text="Text Color" Grid.Row="6" Grid.Column="0" />
+    <colorpicker:ColorButton Grid.Row="5" Grid.Column="1"
+      Color="{Binding LayoutItem.TextColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
   </Grid>
 </UserControl>
