--- a/Layouts/TimerLayout/TimerControl.axaml
+++ b/Layouts/TimerLayout/TimerControl.axaml
@@ -21,7 +21,7 @@
       <Setter Property="Foreground" Value="{Binding LayoutItem.BehindGainingTimeColor}" />
     </Style>
   </UserControl.Styles>
-  <Grid>
+  <Grid Background="{Binding LayoutItem.BackgroundColor}">
     <TextBlock
       Text="{Binding Timer.Elapsed, Converter={StaticResource NullableTimeSpanToStringConverter}}"
       Margin="1,1,10,1" HorizontalAlignment="Right" FontFamily="Consolas, Courier New, monospace"
