--- a/UI/Windows/MainWindow.axaml
+++ b/UI/Windows/MainWindow.axaml
@@ -8,7 +8,7 @@
   xmlns:controls="clr-namespace:LibreSplit.UI.Controls"
   mc:Ignorable="d" Width="300"
   SizeToContent="Height"
-  x:Class="LibreSplit.MainWindow"
+  x:Class="LibreSplit.UI.Windows.MainWindow"
   x:DataType="timing:LibreSplitContext"
   SystemDecorations="None"
   Title="LibreSplit">
@@ -36,13 +36,7 @@
       </ContextMenu>
     </Grid.ContextMenu>
 
-    <ItemsControl ItemsSource="{Binding Layout}">
-      <ItemsControl.ItemTemplate>
-        <DataTemplate x:DataType="layouts:LayoutData">
-          <ContentControl Content="{Binding Control}" />
-        </DataTemplate>
-      </ItemsControl.ItemTemplate>
-    </ItemsControl>
+    <ItemsControl ItemsSource="{Binding Layout}" />
 
     <controls:BorderlessWindowControls />
   </Grid>
