--- a/Layouts/TimerLayout/TimerEditor.axaml
+++ b/Layouts/TimerLayout/TimerEditor.axaml
@@ -9,25 +9,7 @@
       <ColumnDefinition Width="*" />
       <ColumnDefinition Width="Auto" />
     </Grid.ColumnDefinitions>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="*" />
-      <RowDefinition Height="*" />
-      <RowDefinition Height="*" />
-      <RowDefinition Height="*" />
-      <RowDefinition Height="*" />
-      <RowDefinition Height="*" />
-    </Grid.RowDefinitions>
-    <TextBlock Grid.Row="0" Grid.Column="0" Text="Inactive Color" />
-    <c:ColorButton Grid.Row="0" Grid.Column="1" Color="{Binding LayoutItem.InactiveColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
-    <TextBlock Grid.Row="1" Grid.Column="0" Text="Ahead (Gaining Time) Color" />
-    <c:ColorButton Grid.Row="1" Grid.Column="1" Color="{Binding LayoutItem.AheadGainingTimeColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
-    <TextBlock Grid.Row="2" Grid.Column="0" Text="Ahead (Losing Time) Color" />
-    <c:ColorButton Grid.Row="2" Grid.Column="1" Color="{Binding LayoutItem.AheadLosingTimeColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
-    <TextBlock Grid.Row="3" Grid.Column="0" Text="Behind (Gaining Time) Color" />
-    <c:ColorButton Grid.Row="3" Grid.Column="1" Color="{Binding LayoutItem.BehindGainingTimeColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
-    <TextBlock Grid.Row="4" Grid.Column="0" Text="Behind (Losing Time) Color" />
-    <c:ColorButton Grid.Row="4" Grid.Column="1" Color="{Binding LayoutItem.BehindLosingTimeColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
-    <TextBlock Grid.Row="5" Grid.Column="0" Text="Background Color" />
-    <c:ColorButton Grid.Row="5" Grid.Column="1" Color="{Binding LayoutItem.BackgroundColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
+    <TextBlock Grid.Column="0" Text="Background Color" />
+    <c:ColorButton Grid.Column="1" Color="{Binding LayoutItem.BackgroundColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
   </Grid>
 </UserControl>
