--- a/Layouts/SplitsLayout/SplitsControl.axaml
+++ b/Layouts/SplitsLayout/SplitsControl.axaml
@@ -32,7 +32,7 @@
               <DataTemplate x:DataType="local:ComparisonViewModel">
                 <TextBlock TextAlignment="Right" Width="80"
                   Text="{Binding TimeString}" ls:Setters.Classes="{Binding Classes}"
-                  Margin="1,1,10,1" FontFamily="Adwaita Mono, Consolas, Courier New, monospace" />
+                  Margin="1,1,10,1" />
               </DataTemplate>
             </ItemsControl.ItemTemplate>
             <ItemsControl.ItemsPanel>
