--- a/Layouts/TimerLayout/TimerControl.axaml
+++ b/Layouts/TimerLayout/TimerControl.axaml
@@ -7,7 +7,7 @@
   <Grid Background="{Binding LayoutItem.BackgroundColor}">
     <TextBlock
       Text="{Binding Timer.Elapsed, Converter={StaticResource NullableTimeSpanToStringConverter}}"
-      Margin="1,1,10,1" HorizontalAlignment="Right" FontFamily="Adwaita Mono, Consolas, Courier New, monospace"
+      Margin="1,1,10,1" HorizontalAlignment="Right"
       FontSize="40" ls:Setters.Classes="{Binding Classes}"/>
   </Grid>
 </UserControl>
