--- a/UI/Windows/LayoutEditor.axaml
+++ b/UI/Windows/LayoutEditor.axaml
@@ -5,9 +5,10 @@
   xmlns:s="clr-namespace:System"
   xmlns:styles="clr-namespace:Avalonia.Themes.Default.Styles;assembly=Avalonia.Themes.Default"
   xmlns:c="clr-namespace:AvaloniaColorPicker;assembly=AvaloniaColorPicker"
+  xmlns:controls="clr-namespace:LibreSplit.UI.Controls"
   x:Class="LibreSplit.UI.Windows.LayoutEditor"
   x:DataType="local:LayoutEditor"
-  Title="Layout Editor" Width="300" Height="400">
+  Title="Layout Editor" Width="400" Height="400">
   <StackPanel>
     <Grid>
       <Grid.ColumnDefinitions>
@@ -22,28 +23,32 @@
         <RowDefinition Height="*" />
         <RowDefinition Height="*" />
         <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
       </Grid.RowDefinitions>
       <TextBlock Grid.Row="0" Grid.Column="0" Text="Text Color" />
-      <c:ColorButton Grid.Row="0" Grid.Column="1"
+      <c:ColorButton Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right"
         Color="{Binding GlobalContext.LayoutData.TextColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
       <TextBlock Grid.Row="1" Grid.Column="0" Text="Ahead (Gaining Time) Color" />
-      <c:ColorButton Grid.Row="1" Grid.Column="1"
+      <c:ColorButton Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right"
         Color="{Binding GlobalContext.LayoutData.AheadGainingTimeColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
       <TextBlock Grid.Row="2" Grid.Column="0" Text="Ahead (Losing Time) Color" />
-      <c:ColorButton Grid.Row="2" Grid.Column="1"
+      <c:ColorButton Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right"
         Color="{Binding GlobalContext.LayoutData.AheadLosingTimeColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
       <TextBlock Grid.Row="3" Grid.Column="0" Text="Behind (Gaining Time) Color" />
-      <c:ColorButton Grid.Row="3" Grid.Column="1"
+      <c:ColorButton Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right"
         Color="{Binding GlobalContext.LayoutData.BehindGainingTimeColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
       <TextBlock Grid.Row="4" Grid.Column="0" Text="Behind (Losing Time) Color" />
-      <c:ColorButton Grid.Row="4" Grid.Column="1"
+      <c:ColorButton Grid.Row="4" Grid.Column="1" HorizontalAlignment="Right"
         Color="{Binding GlobalContext.LayoutData.BehindLosingTimeColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
       <TextBlock Grid.Row="5" Grid.Column="0" Text="Best Segment Time Color" />
-      <c:ColorButton Grid.Row="5" Grid.Column="1"
+      <c:ColorButton Grid.Row="5" Grid.Column="1" HorizontalAlignment="Right"
         Color="{Binding GlobalContext.LayoutData.BestSegmentTimeColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
       <TextBlock Grid.Row="6" Grid.Column="0" Text="Background Color" />
-      <c:ColorButton Grid.Row="6" Grid.Column="1"
+      <c:ColorButton Grid.Row="6" Grid.Column="1" HorizontalAlignment="Right"
         Color="{Binding GlobalContext.LayoutData.BackgroundColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
+      <TextBlock Grid.Row="7" Grid.Column="0" Text="Font" />
+      <controls:FontPicker Grid.Row="7" Grid.Column="1" HorizontalAlignment="Right"
+        Font="{Binding GlobalContext.LayoutData.Font, Mode=TwoWay, Converter={StaticResource StringToFontFamilyConverter}}" />
     </Grid>
     <ItemsControl ItemsSource="{Binding GlobalContext.LayoutData.Items}">
       <ItemsControl.ItemTemplate>
