--- a/Layouts/SplitsLayout/SplitsControl.axaml
+++ b/Layouts/SplitsLayout/SplitsControl.axaml
@@ -20,19 +20,19 @@
       <DataTemplate x:DataType="local:SegmentViewModel">
         <Grid
           Classes.Active="{Binding IsActive}"
-          Classes.Inactive="{Binding !IsActive}">
+          Classes.Inactive="{Binding !IsActive}"
+          Margin="10,1,10,1">
           <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
           </Grid.ColumnDefinitions>
           <TextBlock Grid.Column="0" Text="{Binding Segment.Label}"
-            HorizontalAlignment="Left" Margin="10,1,1,1" Foreground="White" />
+            HorizontalAlignment="Left" Foreground="White" />
           <ItemsControl ItemsSource="{Binding Comparisons}" Grid.Column="1">
             <ItemsControl.ItemTemplate>
               <DataTemplate x:DataType="local:ComparisonViewModel">
-                <TextBlock TextAlignment="Right" Width="80"
-                  Text="{Binding TimeString}" ls:Setters.Classes="{Binding Classes}"
-                  Margin="1,1,10,1" />
+                <TextBlock TextAlignment="Right" Width="75" 
+                  Text="{Binding TimeString}" ls:Setters.Classes="{Binding Classes}"/>
               </DataTemplate>
             </ItemsControl.ItemTemplate>
             <ItemsControl.ItemsPanel>
