--- a/Layouts/SplitsLayout/SplitsControl.axaml
+++ b/Layouts/SplitsLayout/SplitsControl.axaml
@@ -16,33 +16,41 @@
     </Style>
   </UserControl.Styles>
   <ItemsControl ItemsSource="{Binding SegmentViewModels}">
-    <ItemsControl.ItemTemplate>
+    <ItemsControl.DataTemplates>
       <DataTemplate x:DataType="local:SegmentViewModel">
-        <Grid
-          Classes.Active="{Binding IsActive}"
-          Classes.Inactive="{Binding !IsActive}"
-          Margin="10,1,10,1">
-          <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto" />
-          </Grid.ColumnDefinitions>
-          <TextBlock Grid.Column="0" Text="{Binding Segment.Label}"
-            HorizontalAlignment="Left" Foreground="White" />
-          <ItemsControl ItemsSource="{Binding Comparisons}" Grid.Column="1">
-            <ItemsControl.ItemTemplate>
-              <DataTemplate x:DataType="local:ComparisonViewModel">
-                <TextBlock TextAlignment="Right" Width="75" 
-                  Text="{Binding TimeString}" ls:Setters.Classes="{Binding Classes}"/>
-              </DataTemplate>
-            </ItemsControl.ItemTemplate>
-            <ItemsControl.ItemsPanel>
-              <ItemsPanelTemplate>
-                <StackPanel Orientation="Horizontal" />
-              </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-          </ItemsControl>
-        </Grid>
+        <Border BorderThickness="0 0 0 1" BorderBrush="Gray" Margin="0,0,0,1">
+          <Grid
+            Classes.Active="{Binding IsActive}"
+            Classes.Inactive="{Binding !IsActive}">
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="*" />
+              <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Text="{Binding Segment.Label}"
+              HorizontalAlignment="Left" Foreground="White" Margin="10,0,10,0" />
+            <ItemsControl ItemsSource="{Binding Comparisons}" Grid.Column="1" Margin="10,0,10,0">
+              <ItemsControl.ItemTemplate>
+                <DataTemplate x:DataType="local:ComparisonViewModel">
+                  <TextBlock TextAlignment="Right" Width="75"
+                    Text="{Binding TimeString}" ls:Setters.Classes="{Binding Classes}" />
+                </DataTemplate>
+              </ItemsControl.ItemTemplate>
+              <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                  <StackPanel Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+              </ItemsControl.ItemsPanel>
+            </ItemsControl>
+          </Grid>
+        </Border>
       </DataTemplate>
-    </ItemsControl.ItemTemplate>
+      <DataTemplate x:DataType="local:EmptySegmentViewModel">
+        <Border BorderThickness="0 0 0 1" BorderBrush="Gray" Margin="0,0,0,1">
+          <Grid>
+            <TextBlock />
+          </Grid>
+        </Border>
+      </DataTemplate>
+    </ItemsControl.DataTemplates>
   </ItemsControl>
 </UserControl>
